# jni-encrypt

./: README.md
EncryptUtils/app/: build.gradle
EncryptUtils/app/src/main/java/com/jinlin/encryptutils/des/: DESActivity.java
EncryptUtils/app/src/main/jni/: CMakeLists.txt
EncryptUtils/app/src/main/jni/base64/: base64.cpp
EncryptUtils/app/src/main/jni/des/: des.h
EncryptUtils/gradle/wrapper/: gradle-wrapper.properties
jni-md5-as/gradle/wrapper/: gradle-wrapper.properties
